tests/ui/privacy/ctor-private-from-impl.stderr
error[E0423]: cannot initialize a tuple struct which contains private fields
  --> $DIR/ctor-private-from-impl.rs:13:9
   |
LL |         MyRef(self)
   |         ^^^^^
   |
note: constructor is not visible here due to private fields
  --> $DIR/ctor-private-from-impl.rs:6:26
   |
LL |     pub struct MyRef<'a>(&'a MyStruct);
   |                          ^^^^^^^^^^^^ private field
help: consider making the field publicly accessible
   |
LL |     pub struct MyRef<'a>(pub &'a MyStruct);
   |                          +++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0423`.
